testsuite/tests/parser/should_fail/NoNumericUnderscores0.stderr

NoNumericUnderscores0.hs:11:3: error:
    Illegal underscores in integer literals
    Suggested fix: Perhaps you intended to use NumericUnderscores
